# routes/index.js
@@ -4,5 +4,6 @@ const router = express.Router();
 router.use('/swagger', require('./swagger'));
 router.use('/users', require('./users'));
 router.use('/workoutSessions', require('./workoutSessions'));
+router.use('/oauth', require('./oauth'));
 
 module.exports = router;
